// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Global search results component should render results correctly 1`] = `
<div>
  <div
    className="sc-htoDjs fjTtnT"
  >
    <div
      className="sc-gzVnrw jpnZQI"
    >
      4
       - 
      4
       of
       
      4
       results
    </div>
    <div
      className="sc-jTzLTM dwYLEN"
    >
      <label
        htmlFor="perPage"
      >
        <span
          className="sc-dnqmqq jvzDFl"
        >
          Results per page
        </span>
      </label>
      <select
        className="sc-VigVT fNFOws"
        id="perPage"
        onChange={[Function]}
        value={4}
      >
        <option
          value={4}
        >
          All
        </option>
      </select>
    </div>
  </div>
  <table
    className="row-gutters"
  >
    <thead>
      <tr>
        <th
          className="straight"
        />
        <th
          className="straight"
        >
          Name
        </th>
        <th
          className="straight"
        >
          Prison no.
        </th>
        <th
          className="straight"
        >
          Date of birth
        </th>
        <th
          className="straight"
        >
          Location
        </th>
        <th
          className="straight"
        >
          Actual working name
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="row-gutters"
      >
        <td
          className="row-gutters"
        >
          <a
            className="link"
            href="/prisoner/A1234AC"
            id="imageLink-A1234AC"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="prisoner A1234AC"
              className="clickable"
              height="100"
              id="image-A1234AC"
              src="/app/images/A1234AC/data"
              width="80"
            />
          </a>
        </td>
        <td
          className="row-gutters"
        >
          <a
            className="link"
            href="/prisoner/A1234AC"
            rel="noopener noreferrer"
            target="_blank"
          >
            Quimby
            , 
            Fred
          </a>
        </td>
        <td
          className="row-gutters"
        >
          A1234AC
        </td>
        <td
          className="row-gutters"
        >
          1977-10-15
        </td>
        <td
          className="row-gutters"
        >
          LEEDS HMP
        </td>
        <td
          className="row-gutters"
        >
          
          , 
          
        </td>
      </tr>
      <tr
        className="row-gutters"
      >
        <td
          className="row-gutters"
        >
          <a
            className="link"
            href="/prisoner/A1234AA"
            id="imageLink-A1234AA"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="prisoner A1234AA"
              className="clickable"
              height="100"
              id="image-A1234AA"
              src="/app/images/A1234AA/data"
              width="80"
            />
          </a>
        </td>
        <td
          className="row-gutters"
        >
          <a
            className="link"
            href="/prisoner/A1234AA"
            rel="noopener noreferrer"
            target="_blank"
          >
            Anderson
            , 
            Arthur
          </a>
        </td>
        <td
          className="row-gutters"
        >
          A1234AA
        </td>
        <td
          className="row-gutters"
        >
          1976-09-15
        </td>
        <td
          className="row-gutters"
        >
          Moorland HMP
        </td>
        <td
          className="row-gutters"
        >
          
          , 
          
        </td>
      </tr>
      <tr
        className="row-gutters"
      >
        <td
          className="row-gutters"
        >
          <img
            alt="prisoner A1234AB"
            height="100"
            id="image-A1234AB"
            src="/app/images/A1234AB/data"
            width="80"
          />
        </td>
        <td
          className="row-gutters"
        >
          Runaway
          , 
          Peter
        </td>
        <td
          className="row-gutters"
        >
          A1234AB
        </td>
        <td
          className="row-gutters"
        >
          1970-09-15
        </td>
        <td
          className="row-gutters"
        >
          Released From Leeds
        </td>
        <td
          className="row-gutters"
        >
          
          , 
          
        </td>
      </tr>
    </tbody>
  </table>
  <div>
    <nav
      className="sc-bdVaJa fGYvF"
    >
      <ul
        className="sc-bwzfXH iHMVMS"
      >
        <li
          className="sc-htpNat bYwZFO"
          id="previous-page"
          onClick={[Function]}
          role="button"
        >
          <div
            className="sc-bxivhb lhbcqk"
          >
            Previous
            <span
              className="sc-EHOje dcPHNN"
            >
              page
            </span>
            <span
              className="sc-bZQynM kFuPMl"
            >
              1
               of 
              1
            </span>
          </div>
        </li>
        <li
          className="sc-ifAKCX jEPezK"
        />
      </ul>
    </nav>
  </div>
</div>
`;

exports[`Global search results component should render results when has inactive booking role 1`] = `
<div>
  <div
    className="sc-htoDjs fjTtnT"
  >
    <div
      className="sc-gzVnrw jpnZQI"
    >
      4
       - 
      4
       of
       
      4
       results
    </div>
    <div
      className="sc-jTzLTM dwYLEN"
    >
      <label
        htmlFor="perPage"
      >
        <span
          className="sc-dnqmqq jvzDFl"
        >
          Results per page
        </span>
      </label>
      <select
        className="sc-VigVT fNFOws"
        id="perPage"
        onChange={[Function]}
        value={4}
      >
        <option
          value={4}
        >
          All
        </option>
      </select>
    </div>
  </div>
  <table
    className="row-gutters"
  >
    <thead>
      <tr>
        <th
          className="straight"
        />
        <th
          className="straight"
        >
          Name
        </th>
        <th
          className="straight"
        >
          Prison no.
        </th>
        <th
          className="straight"
        >
          Date of birth
        </th>
        <th
          className="straight"
        >
          Location
        </th>
        <th
          className="straight"
        >
          Actual working name
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="row-gutters"
      >
        <td
          className="row-gutters"
        >
          <a
            className="link"
            href="/prisoner/A1234AC"
            id="imageLink-A1234AC"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="prisoner A1234AC"
              className="clickable"
              height="100"
              id="image-A1234AC"
              src="/app/images/A1234AC/data"
              width="80"
            />
          </a>
        </td>
        <td
          className="row-gutters"
        >
          <a
            className="link"
            href="/prisoner/A1234AC"
            rel="noopener noreferrer"
            target="_blank"
          >
            Quimby
            , 
            Fred
          </a>
        </td>
        <td
          className="row-gutters"
        >
          A1234AC
        </td>
        <td
          className="row-gutters"
        >
          1977-10-15
        </td>
        <td
          className="row-gutters"
        >
          LEEDS HMP
        </td>
        <td
          className="row-gutters"
        >
          
          , 
          
        </td>
      </tr>
      <tr
        className="row-gutters"
      >
        <td
          className="row-gutters"
        >
          <a
            className="link"
            href="/prisoner/A1234AA"
            id="imageLink-A1234AA"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="prisoner A1234AA"
              className="clickable"
              height="100"
              id="image-A1234AA"
              src="/app/images/A1234AA/data"
              width="80"
            />
          </a>
        </td>
        <td
          className="row-gutters"
        >
          <a
            className="link"
            href="/prisoner/A1234AA"
            rel="noopener noreferrer"
            target="_blank"
          >
            Anderson
            , 
            Arthur
          </a>
        </td>
        <td
          className="row-gutters"
        >
          A1234AA
        </td>
        <td
          className="row-gutters"
        >
          1976-09-15
        </td>
        <td
          className="row-gutters"
        >
          Moorland HMP
        </td>
        <td
          className="row-gutters"
        >
          
          , 
          
        </td>
      </tr>
      <tr
        className="row-gutters"
      >
        <td
          className="row-gutters"
        >
          <a
            className="link"
            href="/prisoner/A1234AB"
            id="imageLink-A1234AB"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="prisoner A1234AB"
              className="clickable"
              height="100"
              id="image-A1234AB"
              src="/app/images/A1234AB/data"
              width="80"
            />
          </a>
        </td>
        <td
          className="row-gutters"
        >
          <a
            className="link"
            href="/prisoner/A1234AB"
            rel="noopener noreferrer"
            target="_blank"
          >
            Runaway
            , 
            Peter
          </a>
        </td>
        <td
          className="row-gutters"
        >
          A1234AB
        </td>
        <td
          className="row-gutters"
        >
          1970-09-15
        </td>
        <td
          className="row-gutters"
        >
          Released From Leeds
        </td>
        <td
          className="row-gutters"
        >
          
          , 
          
        </td>
      </tr>
    </tbody>
  </table>
  <div>
    <nav
      className="sc-bdVaJa fGYvF"
    >
      <ul
        className="sc-bwzfXH iHMVMS"
      >
        <li
          className="sc-htpNat bYwZFO"
          id="previous-page"
          onClick={[Function]}
          role="button"
        >
          <div
            className="sc-bxivhb lhbcqk"
          >
            Previous
            <span
              className="sc-EHOje dcPHNN"
            >
              page
            </span>
            <span
              className="sc-bZQynM kFuPMl"
            >
              1
               of 
              1
            </span>
          </div>
        </li>
        <li
          className="sc-ifAKCX jEPezK"
        />
      </ul>
    </nav>
  </div>
</div>
`;
